# jira-cli

./: jira.yaml.example  pyproject.toml
jira_cli/: main.py
tests/: test_jira_cli.py
